--- a/.cproject
+++ b/.cproject
@@ -5,6 +5,7 @@
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="ilg.gnuarmeclipse.managedbuild.cross.config.elf.debug.867171242" moduleId="org.eclipse.cdt.core.settings" name="Debug">
 				<macros>
 					<stringMacro name="LIBOPENCM3_PATH" type="VALUE_TEXT" value="/home/frost/hover8/libopencm3"/>
+					<stringMacro name="FREEMODBUS_PATH" type="VALUE_TEXT" value="/home/frost/hover8/freemodbus/"/>
 					<stringMacro name="FREERTOS_PATH" type="VALUE_TEXT" value="/home/frost/hover8/FreeRTOSv9.0.0/FreeRTOS"/>
 				</macros>
 				<externalSettings>
@@ -76,6 +77,9 @@
 									<listOptionValue builtIn="false" value="&quot;${LIBOPENCM3_PATH}/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${FREERTOS_PATH}/Source/portable/GCC/ARM_CM0&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${FREERTOS_PATH}/Source/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${FREEMODBUS_PATH}/modbus/rtu&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${FREEMODBUS_PATH}/modbus/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${FREEMODBUS_PATH}/modbus/ascii&quot;"/>
 								</option>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.defs.844934398" name="Defined symbols (-D)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.defs" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="DEBUG"/>
@@ -213,6 +217,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
+						<entry excluding="demo/|bsd.txt|Changelog.txt|gpl.txt|lgpl.txt|tools/|doc/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="FreeModbus"/>
 						<entry excluding="portable/BCC/|portable/CCS/|portable/CodeWarrior/|portable/Common/|portable/IAR/|portable/Keil/|portable/MikroC/|portable/MPLAB/|portable/MSVC-MingW/|portable/oWatcom/|portable/Paradigm/|portable/Renesas/|portable/Rowley/|portable/RVDS/|portable/SDCC/|portable/Softune/|portable/Tasking/|portable/WizC/|portable/readme.txt|portable/GCC/ARM_CA53_64_BIT/|portable/GCC/ARM_CA9/|portable/GCC/ARM_CM3/|portable/GCC/ARM_CM3_MPU/|portable/GCC/ARM_CM4_MPU/|portable/GCC/ARM_CM4F/|portable/GCC/ARM_CM7/|portable/GCC/ARM_CR5/|portable/GCC/ARM_CRx_No_GIC/|portable/GCC/ARM7_AT91FR40008/|portable/GCC/ARM7_AT91SAM7S/|portable/GCC/ARM7_LPC2000/|portable/GCC/ARM7_LPC23xx/|portable/GCC/ATMega323/|portable/GCC/AVR32_UC3/|portable/GCC/ColdFire_V2/|portable/GCC/CORTUS_APS3/|portable/GCC/H8S2329/|portable/GCC/HCS12/|portable/GCC/IA32_flat/|portable/GCC/MCF5235/|portable/GCC/MicroBlaze/|portable/GCC/MicroBlazeV8/|portable/GCC/MicroBlazeV9/|portable/GCC/MSP430F449/|portable/GCC/NiosII/|portable/GCC/PPC405_Xilinx/|portable/GCC/PPC440_Xilinx/|portable/GCC/RL78/|portable/GCC/RX100/|portable/GCC/RX600/|portable/GCC/RX600v2/|portable/GCC/STR75x/|portable/GCC/TriCore_1782/|croutine.c|event_groups.c|portable/MemMang/heap_1.c|portable/MemMang/heap_3.c|portable/MemMang/heap_4.c|portable/MemMang/heap_5.c|portable/MemMang/ReadMe.url" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="FreeRTOS"/>
 						<entry excluding="msc.c" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="system/src/diag"/>
